<resources>
    <string name="app_name">ComicKotlin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navi_home">Trang chủ</string>
    <string name="navi_category">Thể loại</string>
    <string name="navi_user">Cá nhân</string>
    <string name="hint_search">Tìm kiếm truyện...</string>
    <string name="title_see_more"><![CDATA[xem thêm >>]]></string>
    <string name="title_top_read">Truyện đọc nhiều</string>
    <string name="title_new_update">Truyện mới cập nhật</string>
    <string name="title_content">Nội dung</string>
    <string name="title_new_chapter">Chapter mới nhất</string>
    <string name="title_start_reading">Bắt đầu đọc</string>
    <string name="chapters">CHAPTERS</string>
    <string name="image_html"><![CDATA[<img data-index=\"1\" src=\"%s\" data-original=\"%s\">]]></string>
    <string name="web_view">
        <![CDATA[<!DOCTYPE HTML><script type=\\\"text/javascript\\\">window.onload = function(){window.location.href = \\\"ready://\\\" + document.body.offsetHeight;}</script><html manifest=\\\'./cache.manifest\\\'><head><meta name=\\\"apple-mobile-web-app-capable\\\" content=\\\"yes\\\"/><style>img{max-width:100%%; height:auto !important;width:auto !important;}; </style></head><body style=\'margin:0 ;padding:0; background-color: #ffffff;\'>%s</body></html>]]></string>
    <string name="hint_feeling_comic">Hãy viết cảm nghĩ của bạn...</string>
    <string name="title_other_name">Tên khác: %s</string>
    <string name="title_author">Tác giả: %s</string>
    <string name="title_status">Tình trạng: %s</string>
    <string name="title_viewer">Lượt xem: %s</string>
    <string name="title_type">Thể loại: %s</string>
    <string name="title_detail_category">Thể loại: %s</string>
    <string name="title_filter_all">Tất cả</string>
    <string name="title_filter_done">Hoàn thành</string>
    <string name="title_filter_type">Thể loại</string>
    <string name="action_settings">action setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
