<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/navigation_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/navi_home"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/navigation_category"
            android:enabled="true"
            android:icon="@drawable/ic_category"
            android:title="@string/navi_category"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/navigation_profile"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/navi_user"
            app:showAsAction="ifRoom"/>

</menu>
