<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_bg"
            android:clickable="true"
            android:focusable="true"
            tools:context=".Screen.home.HomeFragment">

        <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/linear_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="@dimen/dimen_40dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_online_manga"
                    android:layout_marginLeft="@dimen/dimen_10dp"/>

            <RelativeLayout
                    android:id="@+id/relative_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:background="@drawable/custom_search"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/image_search"
                        android:layout_width="@dimen/dimen_16dp"
                        android:layout_height="@dimen/dimen_16dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:src="@drawable/ic_search"
                        android:layout_marginLeft="@dimen/dimen_10dp"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_toEndOf="@+id/image_search"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_search"
                        android:inputType="text"
                        android:textSize="@dimen/dimen_14sp"
                        android:layout_toRightOf="@+id/image_search"/>

            </RelativeLayout>

        </LinearLayout>

        <View
                android:id="@+id/view_underline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_underline"
                app:layout_constraintTop_toBottomOf="@+id/linear_top"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_top_read"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/view_underline">

            <TextView
                    android:id="@+id/text_top_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:text="@string/title_top_read"
                    android:textAllCaps="true"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <View
                    android:layout_width="@dimen/dimen_85dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_below="@+id/text_top_read"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_top_read"
                    android:layout_marginLeft="@dimen/dimen_10dp"/>

            <TextView
                    android:id="@+id/text_top_read_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:text="@string/title_see_more"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="@dimen/dimen_10dp"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_top_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_top_read"
                app:spanCount="4"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/constraint_new_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/recycler_top_read">

            <TextView
                    android:id="@+id/text_new_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:text="@string/title_new_update"
                    android:textAllCaps="true"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <View
                    android:layout_width="@dimen/dimen_85dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_new_update"
                    android:layout_marginLeft="@dimen/dimen_10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:text="@string/title_see_more"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="@dimen/dimen_10dp"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_new_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingBottom="80dp"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_new_update"
                app:spanCount="3"/>

        <ProgressBar
                android:id="@+id/progress_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_top"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>