<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:elevation="@dimen/dimen_15dp"
        android:focusable="true"
        tools:context=".screen.comic.ComicFragment">

    <RelativeLayout
            android:id="@+id/relative_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>

        <TextView
                android:id="@+id/text_title_comic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:layout_toStartOf="@+id/ic_star"
                android:layout_toEndOf="@+id/ic_back"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <ImageView
                android:id="@+id/ic_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dimen_10dp"
                android:src="@drawable/ic_star"/>

    </RelativeLayout>

    <View
            android:id="@+id/view_underTop"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_top"/>

    <ProgressBar
            android:id="@+id/progress_comic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_top"/>

    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_comic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_underTop">

        <android.support.v4.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraint_comic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                <TextView
                        android:id="@+id/text_time_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                        android:id="@+id/image_comic"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:layout_margin="@dimen/dimen_10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_time_update"/>

                <TextView
                        android:id="@+id/text_other_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:textSize="@dimen/dimen_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_comic"
                        app:layout_constraintTop_toTopOf="@+id/image_comic"/>

                <TextView
                        android:id="@+id/text_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_2dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:textSize="@dimen/dimen_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_comic"
                        app:layout_constraintTop_toBottomOf="@+id/text_other_name"/>

                <TextView
                        android:id="@+id/text_type_comic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_2dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:textSize="@dimen/dimen_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_comic"
                        app:layout_constraintTop_toBottomOf="@+id/text_author"/>

                <TextView
                        android:id="@+id/text_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_2dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:textSize="@dimen/dimen_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_comic"
                        app:layout_constraintTop_toBottomOf="@+id/text_type_comic"/>

                <TextView
                        android:id="@+id/text_viewer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_2dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:textSize="@dimen/dimen_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_comic"
                        app:layout_constraintTop_toBottomOf="@+id/text_status"/>

                <TextView
                        android:id="@+id/text_title_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:text="@string/title_content"
                        android:textAllCaps="true"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_comic"/>

                <View
                        android:id="@+id/view_underline"
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:background="@color/color_bg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_content"/>

                <TextView
                        android:id="@+id/text_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:textSize="@dimen/dimen_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_underline"/>

                <TextView
                        android:id="@+id/text_title_new_chapter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_new_chapter"
                        android:textAllCaps="true"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_content"/>

                <View
                        android:id="@+id/view_underChapter"
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:background="@color/color_bg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_new_chapter"/>

                <android.support.v7.widget.RecyclerView
                        android:paddingBottom="@dimen/dimen_20dp"
                        android:id="@+id/recycler_new_chapter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:orientation="vertical"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@+id/view_underChapter"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
            android:id="@+id/relative_start_read"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:background="@drawable/custom_start_reading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/title_start_reading"
                android:textColor="@android:color/white"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

